# simple-token-tracker

./: Anchor.toml  Cargo.toml  README.md  package-lock.json
cli-tool/: Cargo.toml
cli-tool/src/: main.rs
programs/my-project/: Cargo.toml
programs/my-project/src/: lib.rs
